fixed feature box alignment

--- a/styles.css
+++ b/styles.css
@@ -428,48 +428,46 @@ nav {
   text-shadow: 1px 1px 2px #ffffffdb;
 }
 
+.button-link {
+  text-decoration: none;
+}
+
+.learn-more {
+  background-color: #eab412c1;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.learn-more:hover {
+  background-color: #d29e0f;
+  transform: scale(1.05);
+}
 .offer-bg {
   width: 100vw;
 }
 
-@media (max-width: 900px) {
-  .section-3-container {
-    margin-bottom: 6rem;
-  }
-  .section-3 .header {
-    font-size: 2rem;
-    top: -8em;
-    z-index: 1;
-    line-height: 1.2;
-    font-size: 3rem;
-  }
-  .section-3-container .offer-bg {
-    max-width: 100%;
-    overflow: hidden;
-    height: 60dvh;
-  }
-}
-
-@media (max-width: 500px) {
-  .section-3 .header {
-    top: -19.7em;
-    font-size: 1.7rem;
-  }
-
-  .features-container h2 {
-    font-size: 1.1rem;
-  }
-}
-
-@media (max-width: 350px) {
-  .section-3 .header {
-    top: -25em;
-    font-size: 1.7rem;
-  }
-}
+/* .feature-cards-container {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1.5em;
+  flex-wrap: wrap;
+} */
 
 .features-container h2 {
   text-align: center;
+}
+.feature-cards-container {
+  display: grid;
+
+  margin-block: 4em;
+  gap: 2em;
+  grid-template-columns: repeat(3, minmax(350px, 1fr));
 }
 
 .feature-box {
@@ -479,9 +477,9 @@ nav {
   padding: 1.5rem 1rem;
   border-radius: 10px;
   backdrop-filter: blur(30%);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
   gap: 2em;
 }
 .feature-box {
@@ -499,25 +497,65 @@ nav {
   color: var(--light-grey);
 }
 
-.feature-cards-container {
-  margin-top: 3rem;
-  display: flex;
-  justify-content: space-between;
-  gap: 1.5em;
-  flex-wrap: wrap;
-}
-
 .features-container {
   max-width: 1300px;
 }
 
 /* SECTION 3 MEDIA QUERY */
-
 @media (max-width: 900px) {
+  .section-3-container {
+    margin-bottom: 6rem;
+  }
+  .section-3 .header {
+    font-size: 2rem;
+    top: -12 em;
+    z-index: 1;
+    line-height: 1.2;
+    font-size: 3rem;
+  }
+  .section-3-container .offer-bg {
+    max-width: 100%;
+    overflow: hidden;
+    height: 60dvh;
+  }
+
+  .feature-heading {
+    text-align: center;
+    margin-inline: auto;
+  }
   .feature-cards-container {
     text-align: center;
     align-items: center;
     justify-content: center;
+    grid-template-columns: repeat(2, minmax(350px, 1fr));
+  }
+  .feature-cards-container .feature-box:last-child {
+    justify-self: center;
+    grid-column: span 2;
+  }
+}
+
+@media (max-width: 500px) {
+  .section-3 .header {
+    top: -19.7em;
+    font-size: 1.7rem;
+  }
+
+  .features-container h2 {
+    font-size: 1.1rem;
+  }
+
+  .feature-cards-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 350px) {
+  .section-3 .header {
+    top: -25em;
+    font-size: 1.7rem;
   }
 }
 
